@startuml

class Main {
}
class Director {
    -builder
    +construct()
}
abstract class Builder {
    +{abstract} makeTitle()
    +{abstract} makeString()
    +{abstract} makeItems()
    +{abstract} close()
}
class TextBuilder {
    -buffer
    +makeTitle()
    +makeString()
    +makeItems()
    +close()
    +getResult()
}
class HTMLBuilder {
    -filename
    -writer
    +makeTitle()
    +makeString()
    +makeItems()
    +close()
    +getResult()
}

Main -> Director : Uses >
Director o-> Builder
Builder <|-- TextBuilder
Main --> TextBuilder : Uses >
Builder <|-- HTMLBuilder
Main --> HTMLBuilder : Uses >

@enduml